--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ body {
     height: 100%;
     font: 13px/16px 'Raleway', sans-serif;
     color: #000;
+    overflow-x: hidden;
 }
 
 ol, ul {
@@ -135,16 +136,22 @@ a, a:hover {
     height: 100px;
     width: 100px;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 .me .name{
     float: left;
-    line-height: 100px;
+    margin-top: 12%;
     margin-right: 10px;
     font-family: Lobster, cursive;
     color: #e5e5e5;
     letter-spacing: 1px;
     font-size: 22px;
+    cursor: pointer;
+}
+
+.me:hover .name{
+    text-decoration: underline;
 }
 
 .works-container {
@@ -228,10 +235,10 @@ a, a:hover {
 
 .contact{
     z-index: 9999;
-    width: 250px;
+    width: 280px;
     position: absolute;
     left: 50%;
-    margin-left: -125px;
+    margin-left: -140px;
     bottom: 50px;
 
     text-align: center;
@@ -274,6 +281,131 @@ a, a:hover {
     color: rgba(255, 255, 255, .8);
 }
 
+.sidebar {
+    position: absolute;
+    right: -410px;
+    width: 406px;
+    background-color: rgba(255, 255, 255, 0.85);
+    height: 100%;
+    z-index: 999999;
+    border-left: 1px solid #AAAAAA;
+    -webkit-box-shadow: -10px 0px 72px 6px rgba(0,0,0,0.6);
+    -moz-box-shadow: -10px 0px 72px 6px rgba(0,0,0,0.6);
+    box-shadow: -10px 0px 72px 6px rgba(0,0,0,0.6);
+    animation: slideOut 0.5s ease-in-out;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    height: 30px;
+    width: 30px;
+    background: url("../img/close-ico.png") no-repeat center center;
+    background-size: contain;
+    z-index: 99999999;
+    cursor: pointer;
+}
+
+@keyframes slideIn {
+    from {
+        right: -410px;
+    }
+    to {
+        right: 0;
+    }
+}
+
+@keyframes slideOut {
+    from {
+        right: 0;
+    }
+    to {
+        right: -410px;
+    }
+}
+
+.show-sidebar {
+    right: 0;
+    animation: slideIn 0.5s ease-in-out;
+}
+
+.photo-large{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 180px;
+    overflow: hidden;
+    border-bottom: 1px solid #AAAAAA;
+}
+
+.photo-large img{
+    position: absolute;
+    left: 50%;
+    margin-left: -310px;
+    height: 300px;
+    width: 550px;
+}
+
+.about {
+    position: absolute;
+    top: 200px;
+    left: 50%;
+    margin-left: -40%;
+    width: 80%;
+    color: #222222;
+    text-align: center;
+}
+
+.about h3{
+    font-weight: bold;
+    font-size: 25px;
+}
+
+.about p{
+    text-indent: 10px;
+    margin-top: 20px;
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 500;
+}
+
+.skills{
+    position: absolute;
+    bottom: 20px;
+    text-align: center;
+    width: 250px;
+    left: 50%;
+    margin-left: -125px;
+}
+
+.skill-ico {
+    display: inline-block;
+    height: 50px;
+    width: 50px;
+    margin-bottom: 5px;
+}
+
+.js {
+    background: url("../img/skill-JS.png") no-repeat center center;
+    background-size: contain;
+}
+.html-css{
+    background: url("../img/skill-HTML5CSS3.png") no-repeat center center;
+    background-size: contain;
+    height: 50px;
+    width: 100px;
+}
+.jquery {
+    background: url("../img/skill-Jquery.png") no-repeat center center;
+    background-size: contain;
+}
+.ps {
+    background: url("../img/skill-Photoshop.png") no-repeat center center;
+    background-size: contain;
+    height: 40px;
+    width: 40px;
+}
 
 @media screen and (max-width: 1023px) {
 
@@ -292,17 +424,18 @@ a, a:hover {
         border-radius: 50%;
     }
     .me .name{
-        line-height: 80px;
+        margin-top: 12%;
         font-size: 19px;
     }
 
     .me {
         margin-top: 30px;
-        z-index: 9999;
+        z-index: 99999;
         position: relative;
         float: right;
         height: 80px;
     }
+
 
     .work-item {
         height: 250px;
@@ -350,7 +483,7 @@ a, a:hover {
         border-radius: 50%;
     }
     .me .name{
-        line-height: 70px;
+        margin-top: 12%;
         font-size: 18px;
     }
 
