--- a/css/style.css
+++ b/css/style.css
@@ -496,6 +496,56 @@ a, a:hover {
         height: 80px;
     }
 
+    .sidebar {
+        position: absolute;
+        right: -610px;
+        width: 100%;
+        background-color: rgba(255, 255, 255, 0.85);
+        height: 100%;
+        z-index: 999999;
+        border-left: 1px solid #AAAAAA;
+        -webkit-box-shadow: -10px 0px 72px 6px rgba(0,0,0,0.6);
+        -moz-box-shadow: -10px 0px 72px 6px rgba(0,0,0,0.6);
+        box-shadow: -10px 0px 72px 6px rgba(0,0,0,0.6);
+        animation: slideOut 0.5s ease-in-out;
+    }
+
+    .photo-large{
+        position: absolute;
+        top: 0;
+        max-width: 400px;
+        left: 50%;
+        margin-left: -200px;
+        width: 100%;
+        height: 180px;
+        overflow: hidden;
+        border-bottom: 1px solid #AAAAAA;
+    }
+
+    @media screen and (max-width: 350px) {
+        .photo-large{
+            position: absolute;
+            top: 0;
+            width: 100%;
+            margin-left: 0;
+            left: 0;
+        }
+    }
+
+    .photo-large img{
+        position: absolute;
+        left: 50%;
+        margin-left: -310px;
+        height: 300px;
+        width: 550px;
+    }
+
+    .show-sidebar{
+        right: 0;
+        animation: slideIn 0.5s ease-in-out;
+    }
+
+
     .works-container .work-item{
         height: 250px;
         float: none;
