--- a/css/style.css
+++ b/css/style.css
@@ -317,11 +317,14 @@ a, a:hover {
     box-shadow: inset 0px -62px 140px 16px rgba(0,0,0,0.5);
 }
 
-/*.sidebar-overlay {
-    position: absolute;
-    height: 100%;
+.sidebar-overlay {
     width: 100%;
-}*/
+    height: 100%;
+    background: transparent;
+    -webkit-box-shadow: -25px 10px 118px -11px rgba(0,0,0,0.72);
+    -moz-box-shadow: -25px 10px 118px -11px rgba(0,0,0,0.72);
+    box-shadow: -25px 10px 118px -11px rgba(0,0,0,0.72);
+}
 
 .close {
     position: absolute;
@@ -536,7 +539,6 @@ a, a:hover {
         animation: slideOut 0.5s ease-in-out;
         display: none;
     }
-
 
     .photo-large{
         top: 0;
