--- a/Neos/css/style.css
+++ b/Neos/css/style.css
@@ -1,5 +1,9 @@
+.text-right {
+    text-align: right;
+}
+
 .container{
-    max-width: 1180px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 0 5px;
 }
@@ -15,9 +19,9 @@ body {
     font-weight: lighter;
     overflow-x: hidden;
     background: url("../img/background-alt2.jpg") no-repeat top center;
-    min-height: 3460px;
+    min-height: 3670px;
     height: 100%;
-    background-size: 109% 4000px;
+    background-size: 100% 4100px;
 }
 
 @media screen and (max-width: 1140px) {
@@ -66,14 +70,14 @@ body {
 
 .header-nav{
     margin-top: 40px;
-    font-size: 25px;
+    font-size: 21px;
     font-weight: bold;
 }
 
 .nav-link {
     display: inline-block;
     float: left;
-    margin-right: 40px;
+    margin-right: 50px;
 }
 .nav-lin:last-child {
     margin-right: 0;
@@ -84,7 +88,7 @@ body {
 
 .header-center{
     position: absolute;
-    top: 310px;
+    top: 280px;
     height: 120px;
     width: 100%;
     background-color: rgba(245,229,216, 0.5);
@@ -102,8 +106,8 @@ body {
 
 .logo-img{
     display: inline-block;
-    height: 80px;
-    width: 360px;
+    height: 70px;
+    width: 300px;
 }
 
 .logo-img img{
@@ -129,7 +133,7 @@ body {
 .tracking-button{
     display: block;
     width: 100%;
-    font-size: 32px;
+    font-size: 27px;
     font-weight: lighter;
     letter-spacing: 1px;
     background: url("../img/tracking-icon.png") no-repeat 90% center;
@@ -158,23 +162,23 @@ body {
 
 .article-header{
     display: inline-block;
-    font-size: 50px;
+    font-size: 40px;
     color: #fff;
     font-weight: bold;
     line-height: 55px;
     margin-bottom: 20px;
-    max-width: 750px;
+    max-width: 650px;
 }
 
 .article{
-    margin-top: 35px;
+    margin-top: 55px;
     position: relative;
     margin-bottom: 100px;
 }
 
 .article p {
     text-indent: 50px;
-    font-size: 27px;
+    font-size: 22px;
     font-weight: lighter;
     line-height: 28px;
     margin-bottom: 20px;
@@ -187,7 +191,7 @@ body {
 }
 
 .price-block{
-    margin-top: 180px;
+    margin-top: 80px;
     position: relative;
 }
 
@@ -230,34 +234,15 @@ body {
     margin-right: 0;
 }
 
-.price-item:nth-child(1):after,.price-item:nth-child(3):after{
-    content: '';
-    width: 30px;
-    height: 50px;
-    background: url("../img/arrow.png") no-repeat;
-    background-size: contain;
-    z-index: 999;
-    position: absolute;
-    top: 210px;
-    left: 45%;
-}
-
-.price-item:nth-child(3){
-    margin-bottom: 8%;
-}
-
 .price-item img{
     position: center;
-}
-
-
-.price-item:last-child img{
-    margin-top: -55px;
+    height: 80px;
+    max-width: 160px;
 }
 
 .item-descr{
     color: #fff;
-    font-size: 25px;
+    font-size: 22px;
     line-height: 30px;
     text-align: center;
     width: 250px;
@@ -282,6 +267,36 @@ body {
     margin-bottom: 10px;
 }
 
+.price-block .description {
+    color: #fff;
+    font-size: 22px;
+    line-height: 25px;
+}
+
+.price-block .description li {
+    padding-left: 20px;
+}
+
+.video-block {
+    position: relative;
+    height: 500px;
+    margin-bottom: 150px;
+}
+
+.video-block video {
+    display: block;
+    margin: 90px auto 0;
+    border: 1px solid #5C77E1;
+    border-radius: 5px; 
+}
+
+.video-block video:hover{
+    cursor: pointer!important;
+    -webkit-box-shadow: 0px 0px 30px 0px rgba(92,119,225,0.6);
+    -moz-box-shadow: 0px 0px 30px 0px rgba(92,119,225,0.6);
+    box-shadow: 0px 0px 30px 0px rgba(92,119,225,0.6);
+    transition: 1s box-shadow;
+}
 
 .setup-block {
     position: relative;
@@ -308,6 +323,10 @@ body {
     height: 180px;
     float: left;
     margin-bottom: 30px;
+}
+
+.setup-item img{
+    width: 100px;
 }
 
 .setup-item:nth-child(3n){
@@ -385,9 +404,9 @@ body {
 }
 
 .contact-header{
-    font-size: 50px;
+    font-size: 40px;
     font-weight: bold;
-
+    margin-bottom: -30px;
 }
 
 .contacts-list{
@@ -405,7 +424,7 @@ body {
 }
 
 .contacts-list li{
-    font-size: 28px;
+    font-size: 22px;
     color: #fff;
     width: 100%;
     margin-bottom: 15px;
