--- a/Neos/css/style-mobile.css
+++ b/Neos/css/style-mobile.css
@@ -48,6 +48,7 @@
         background-position: right;
         background-size: contain;
         font-size: 32px;
+        background-size: 50px 50px; 
     }
 
     .tracking-button-block{
@@ -56,16 +57,18 @@
         right: 10px;
         width: 215px;
         height: 60px;
+        max-width: 185px;
+        margin-right: 10px;
     }
 
     .tracking-button{
-        font-size: 25px;
+        font-size: 22px;
         font-weight: bold;
     }
 
     .header-center{
-        height: 150px;
-        top: 30%;
+        height: 130px;
+        top: 32%;
     }
 
     .tracking-button:hover {
@@ -125,7 +128,7 @@
         margin-left: 0;
         margin-bottom: 0;
         text-align: left;
-        font-size: 40px;
+        font-size: 30px;
         line-height: 42px;
     }
 
@@ -134,7 +137,7 @@
         margin-bottom: 20px;
         text-indent: 40px;
         padding: 0 5px;
-        font-size: 25px;
+        font-size: 20px;
         line-height: 30px;
     }
 
@@ -148,7 +151,7 @@
 
     .price-items-container{
         margin-top: 0;
-        min-height: 800px;
+        min-height: 550px;
         overflow: hidden;
         margin-bottom: 0;
     }
@@ -156,7 +159,6 @@
     .price-block .article-header{
         width: 100%;
         margin-left: 0;
-        font-size: 45px;
         margin-bottom: 20px;
         padding: 0;
     }
@@ -165,13 +167,23 @@
         display: none;
     }
 
+    .price-item:first-child{
+        margin-top: 0;
+    }
+
     .price-item{
         width: 50%;
+        margin-top: -40px;
         margin-right: 0;
+        margin-bottom: 0;
     }
 
     .price-item img{
-        width: 80px;
+        max-width: 120px;
+    }
+
+    .price-item:first-child img{
+        height: 60px;
     }
 
     .price-item:nth-child(1):after{
@@ -188,7 +200,7 @@
 
     .price-item:nth-child(2){
         position: absolute;
-        left: 25%;
+        right:5%;
         top: 140px;
     }
 
@@ -211,73 +223,30 @@
         margin-left: -100px;
     }
 
-    .price-item:nth-child(3):after{
-        width: 30px;
-        height: 40px;
-        top: 30px;
-        left: 85%;
-        -webkit-transform: rotate(-90deg);
-        -moz-transform: rotate(-90deg);
-        -ms-transform: rotate(-90deg);
-        -o-transform: rotate(-90deg);
-        transform: rotate(-90deg);
-    }
-
-    .price-item:nth-child(4){
+    .price-block .description{
         position: absolute;
-        right: 0;
-        top: -40px;
-        margin-right: 0;
+        bottom: 0;
+        font-size: 18px;
+        padding-left: 10px;
     }
 
-    .price-item:nth-child(4) img{
-        margin-top: 10px;
-    }
-
-
-    .price-item:nth-child(5){
-        position: absolute;
-        width: 100%;
-        bottom: 70px;
-    }
-
-    .price-item:nth-child(5) .item-descr{
-        width: 200px;
-        position: absolute;
-        left: 50%;
-        margin-left: -100px;
-    }
-
-    .price-item:nth-child(5) img{
-        width: 200px;
-        margin: 0 auto;
-    }
-
-    .price-item:nth-child(6){
-        position: absolute;
-        right: 0;
-        top: 280px;
-        padding-right: 10px;
-    }
-
-    .price-item:nth-child(6) img{
-        width: 110px;
-        height: 70px;
+    .price-block .description li{
+        font-size: 16px;
     }
 
     .item-descr{
         width: 100%;
         padding: 0 10px;
-        font-size: 20px;
+        font-size: 16px;
         text-align: center;
+    }
+
+    .video-block {
+        height: 380px;
     }
 
     .setup-block{
         margin-top: -50px;
-    }
-
-    .setup-block .article-header{
-        font-size: 40px;
     }
 
     .setup-items-container{
