--- a/Neos/css/style.css
+++ b/Neos/css/style.css
@@ -19,38 +19,38 @@ body {
     font-weight: lighter;
     overflow-x: hidden;
     background: url("../img/background-alt2.jpg") no-repeat top center;
-    min-height: 3720px;
+    min-height: 3800px;
     height: 100%;
     background-size: 100% 4100px;
 }
 
 @media screen and (max-width: 1140px) {
     #wrapper{
-        background-size: 115% 4000px;
+        background-size: 108% 4100px;
     }
 }
 
 @media screen and (max-width: 1040px) {
     #wrapper{
-        background-size: 114% 4050px;
+        background-size: 108% 4100px;
     }
 }
 
 @media screen and (max-width: 940px) {
     #wrapper{
-        background-size: 115% 4070px;
+        background-size: 108% 4100px;
     }
 }
 
 @media screen and (max-width: 840px) {
     #wrapper{
-        background-size: 115% 4100px;
+        background-size: 112% 4200px;
     }
 }
 
 @media screen and (max-width: 800px) {
     #wrapper{
-        background-size: 116% 4150px;
+        background-size: 116% 4100px;
     }
 }
 
@@ -281,6 +281,7 @@ body {
     position: relative;
     height: 500px;
     margin-bottom: 150px;
+    padding: 0 20px;
 }
 
 .video-block video {
@@ -297,6 +298,10 @@ body {
     -moz-box-shadow: 0px 0px 30px 0px rgba(92,119,225,0.6);
     box-shadow: 0px 0px 30px 0px rgba(92,119,225,0.6);
     transition: 1s box-shadow;
+}
+
+@media screen and (max-width: 1040px) {
+    
 }
 
 .setup-block {
