--- a/CashYouPrelend/css/main.css
+++ b/CashYouPrelend/css/main.css
@@ -944,11 +944,11 @@ a {
             transform: translate(-50%, -50%); }
 
 .container {
-  max-width: 1300px;
+  max-width: 100%;
   width: 100%;
   -webkit-box-sizing: border-box !important;
           box-sizing: border-box !important;
-  padding: 0 25px;
+  padding: 0 30px;
   margin: 0 auto; }
   @media (max-width: 1023px) {
     .container {
@@ -986,6 +986,12 @@ a {
   transition: background-color 0.3s, border-color 0.3s, color  0.3s; }
   .button:hover {
     background-color: #db5400; }
+  @media (max-width: 449px) {
+    .button.mobile-center {
+      position: absolute;
+      left: 50%;
+      margin-left: -85px;
+      bottom: 100px; } }
 
 #wrapper {
   overflow: hidden;
@@ -1005,6 +1011,33 @@ a {
       #wrapper:after {
         display: none; } }
 
+#mobile-menu {
+  height: 100%;
+  width: 100%;
+  background: #fff;
+  position: absolute;
+  left: -1000px;
+  display: none; }
+
+#menu-opener {
+  position: absolute;
+  top: 34px;
+  left: 30px;
+  height: 22px;
+  width: 20px;
+  display: none;
+  cursor: pointer; }
+  #menu-opener span {
+    display: block;
+    margin-bottom: 7px;
+    background: #444;
+    height: 2px;
+    width: 20px; }
+    #menu-opener span:nth-child(2) {
+      width: 15px; }
+    #menu-opener span:nth-child(3) {
+      margin-bottom: 0; }
+
 #background-parallax {
   max-width: 100%;
   z-index: -1;
@@ -1020,7 +1053,7 @@ a {
     background: url("../img/background.png") no-repeat center center;
     -webkit-background-size: contain;
             background-size: contain;
-    opacity: 0.3; }
+    opacity: 1; }
     @media (max-width: 767px) {
       #background-parallax .layer {
         background: url("../img/background-mobile.png") no-repeat center center;
@@ -1029,7 +1062,12 @@ a {
 header {
   width: 100%;
   height: 80px;
+  height: 70px;
   padding-top: 30px; }
+  @media (max-width: 449px) {
+    header {
+      -webkit-box-sizing: border-box;
+              box-sizing: border-box; } }
   header #logo {
     display: inline-block;
     float: left;
@@ -1037,8 +1075,11 @@ header {
     height: 30px; }
     @media (max-width: 449px) {
       header #logo {
-        width: 130px;
-        height: 26px; } }
+        margin-left: 30px; } }
+    @media (max-width: 319px) {
+      header #logo {
+        width: 133px;
+        height: 25px; } }
     header #logo img {
       height: 100%;
       width: 100%; }
@@ -1053,6 +1094,10 @@ header {
     @media (max-width: 449px) {
       header .button {
         width: 120px;
+        height: 25px; } }
+    @media (max-width: 319px) {
+      header .button {
+        width: 133px;
         height: 25px; } }
     header .button:hover {
       background-color: #FF6200;
@@ -1113,10 +1158,16 @@ header {
       text-transform: uppercase;
       font-weight: 500;
       margin-bottom: 80px; }
+      @media (max-width: 449px) {
+        .intro-section .slide-content .heading {
+          font-size: 24px; } }
       .intro-section .slide-content .heading span {
         display: block;
         width: 100%;
         margin-bottom: 30px; }
+        @media (max-width: 449px) {
+          .intro-section .slide-content .heading span {
+            margin-bottom: 10px; } }
       .intro-section .slide-content .heading b {
         font-size: 100px;
         color: #FF6200;
@@ -1133,7 +1184,7 @@ header {
         .intro-section .slide-content .descr {
           margin-top: 60px; } }
     .intro-section .slide-content .button {
-      margin-top: 100px;
+      margin-top: 40px;
       -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.2);
               box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.2); }
   .intro-section .social {
@@ -1283,6 +1334,37 @@ header {
         width: 2px;
         background: #444; }
 
+#wrapper.mobile .social {
+  height: 20px;
+  width: 170px;
+  bottom: 60px;
+  left: 50%;
+  margin-left: -85px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  display: none; }
+
+#wrapper.mobile .menu {
+  display: none;
+  height: 80px;
+  width: 250px;
+  left: 50%;
+  margin-left: -125px;
+  bottom: 120px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-align-content: center;
+      -ms-flex-line-pack: center;
+          align-content: center; }
+  #wrapper.mobile .menu .dots-open-menu {
+    display: none; }
+
 .advantage-container {
   max-width: 850px;
   margin: 0 auto;
@@ -1403,28 +1485,30 @@ header {
   .slide-4 .slide-content .heading {
     max-width: 100%;
     margin-bottom: 30px; }
-  @media (max-width: 1023px) {
-    .slide-4 .slide-content .text-block {
-      max-height: 360px;
-      overflow: scroll;
-      margin-bottom: 25px; } }
-  @media (max-width: 767px) {
-    .slide-4 .slide-content .text-block {
-      max-height: 300px; } }
-  @media (max-width: 449px) {
-    .slide-4 .slide-content .text-block {
-      max-height: 200px; } }
-  .slide-4 .slide-content .text-block p {
-    font-size: 14px;
-    line-height: 18px;
-    margin-bottom: 30px;
-    text-align: left; }
-    .slide-4 .slide-content .text-block p b.orange {
-      font-weight: bold;
-      color: #FF6200; }
-    .slide-4 .slide-content .text-block p b.green {
-      font-weight: bold;
-      color: #38BD00; }
+  .slide-4 .slide-content .text-block {
+    max-height: 420px;
+    overflow-y: scroll;
+    margin-bottom: 25px; }
+    @media (max-width: 1023px) {
+      .slide-4 .slide-content .text-block {
+        max-height: 360px; } }
+    @media (max-width: 767px) {
+      .slide-4 .slide-content .text-block {
+        max-height: 300px; } }
+    @media (max-width: 449px) {
+      .slide-4 .slide-content .text-block {
+        max-height: 200px; } }
+    .slide-4 .slide-content .text-block p {
+      font-size: 14px;
+      line-height: 18px;
+      margin-bottom: 30px;
+      text-align: left; }
+      .slide-4 .slide-content .text-block p b.orange {
+        font-weight: bold;
+        color: #FF6200; }
+      .slide-4 .slide-content .text-block p b.green {
+        font-weight: bold;
+        color: #38BD00; }
   .slide-4 .slide-content .button {
     margin-top: 0px; }
     @media (max-width: 767px) {
@@ -1457,7 +1541,7 @@ header {
         transition: background-color 0.3s; }
     @media (max-width: 767px) {
       .slide-4 .slide-content .tags li {
-        width: 110px; } }
+        width: 106px; } }
     @media (max-width: 449px) {
       .slide-4 .slide-content .tags {
         -webkit-box-pack: justify;
@@ -1472,6 +1556,9 @@ header {
   bottom: 30px;
   left: 50%;
   margin-left: -95px; }
+  @media (max-width: 449px) {
+    .prev-next {
+      bottom: 10px; } }
   .prev-next button {
     padding: 0 10px;
     height: 30px;
@@ -1508,12 +1595,19 @@ header {
     -webkit-align-content: center;
         -ms-flex-line-pack: center;
             align-content: center; }
+    @media (max-width: 449px) {
+      .prev-next button {
+        background: rgba(255, 255, 255, 0.5); } }
     .prev-next button:hover {
       color: #FF6200;
       border-color: #FF6200;
       -webkit-transition: border-color 0.3s, color 0.3s;
       -o-transition: border-color 0.3s, color 0.3s;
       transition: border-color 0.3s, color 0.3s; }
+      @media (max-width: 449px) {
+        .prev-next button:hover {
+          color: #444;
+          border-color: #444; } }
     .prev-next button.slick-disabled {
       opacity: 0;
       -webkit-transition: opacity 0.3s;
