--- a/CashYouPrelend/css/main.css
+++ b/CashYouPrelend/css/main.css
@@ -983,15 +983,13 @@ a {
   background: #FF6200;
   -webkit-transition: background-color 0.3s, border-color 0.3s, color  0.3s;
   -o-transition: background-color 0.3s, border-color 0.3s, color  0.3s;
-  transition: background-color 0.3s, border-color 0.3s, color  0.3s; }
+  transition: background-color 0.3s, border-color 0.3s, color  0.3s;
+  position: absolute;
+  left: 50%;
+  margin-left: -85px;
+  bottom: 100px; }
   .button:hover {
     background-color: #db5400; }
-  @media (max-width: 449px) {
-    .button.mobile-center {
-      position: absolute;
-      left: 50%;
-      margin-left: -85px;
-      bottom: 100px; } }
 
 #wrapper {
   overflow: hidden;
@@ -1066,6 +1064,7 @@ header {
   padding-top: 30px; }
   @media (max-width: 449px) {
     header {
+      padding-top: 0;
       -webkit-box-sizing: border-box;
               box-sizing: border-box; } }
   header #logo {
